slurm-5118670_4.out
/var/spool/slurm/slurmd/job5118985/slurm_script: line 9: /home/s/sutton/njqgame/RLENV/bin/activate: No such file or directory
4 0.1250000000 0.00000 16.0000000000 0.90000 0.10000 1.00000 20 100 1
Current working directory is /gpfs/fs0/scratch/s/sutton/njqgame/OffpolicyAlgorithms
Running on hostname nia1446.scinet.local

Starting run at: Wed Apr  7 14:04:54 EDT 2021
  File "Learning.py", line 12
    def learn(config: Configuration):
                    ^
SyntaxError: invalid syntax
Program test finished with exit code 1 at: Wed Apr  7 14:04:54 EDT 2021

scontrol show jobid 5118985
JobId=5118985 ArrayJobId=5118670 ArrayTaskId=4 JobName=DynaMazeTileCodingFeat_SARSA
   UserId=njqgame(3108162) GroupId=sutton(6000291) MCS_label=N/A
   Priority=583889 Nice=0 Account=def-sutton QOS=normal
   JobState=COMPLETING Reason=None Dependency=(null)
   Requeue=0 Restarts=0 BatchFlag=1 Reboot=0 ExitCode=0:0
   RunTime=00:00:07 TimeLimit=00:16:00 TimeMin=N/A
   SubmitTime=2021-04-07T13:08:12 EligibleTime=2021-04-07T13:08:14
   AccrueTime=2021-04-07T13:08:14
   StartTime=2021-04-07T14:04:49 EndTime=2021-04-07T14:04:56 Deadline=N/A
   SuspendTime=None SecsPreSuspend=0 LastSchedEval=2021-04-07T14:04:49
   Partition=compute AllocNode:Sid=nia-login06:364352
   ReqNodeList=(null) ExcNodeList=(null)
   NodeList=nia1446
   BatchHost=nia1446
   NumNodes=1 NumCPUs=80 NumTasks=1 CPUs/Task=1 ReqB:S:C:T=0:0:*:*
   TRES=cpu=80,mem=175000M,node=1,billing=40
   Socks/Node=* NtasksPerN:B:S:C=0:0:*:* CoreSpec=*
   MinCPUsNode=1 MinMemoryNode=175000M MinTmpDiskNode=0
   Features=[skylake|cascade] DelayBoot=00:00:00
   OverSubscribe=NO Contiguous=0 Licenses=(null) Network=(null)
   Command=/gpfs/fs0/scratch/s/sutton/njqgame/OffpolicyAlgorithms/Submit_Jobs.SL
   WorkDir=/gpfs/fs0/scratch/s/sutton/njqgame/OffpolicyAlgorithms
   StdErr=/gpfs/fs0/scratch/s/sutton/njqgame/OffpolicyAlgorithms/slurm-5118670_4.out
   StdIn=/dev/null
   StdOut=/gpfs/fs0/scratch/s/sutton/njqgame/OffpolicyAlgorithms/slurm-5118670_4.out
   Power=
   MailUser=njqgame@scinet.local MailType=NONE

sacct -j 5118985
       JobID    JobName    Account    Elapsed  MaxVMSize     MaxRSS  SystemCPU    UserCPU ExitCode 
------------ ---------- ---------- ---------- ---------- ---------- ---------- ---------- -------- 
5118670_4    DynaMazeT+ def-sutton   00:00:07                        00:00.124  00:00.094      0:0 
5118670_4.b+      batch def-sutton   00:00:07    138528K      1248K  00:00.124  00:00.094      0:0 
5118670_4.e+     extern def-sutton   00:00:07    138360K      1064K   00:00:00   00:00:00      0:0 
